syntax = "proto3";

option csharp_namespace = "GrpcServiceSigner";

package PdfGenerator;

service PdfGenerator {
	rpc UploadFile(UploadReq) returns (UploadRes);

	rpc GeneratePdf(GenPdfReq) returns (GenPdfRes);
}

message UploadReq {
	string fileName = 1;
	bytes buffers = 2;
}

message UploadRes {
	string msg = 1;
}

message GenPdfReq {
	string fileName = 1;
	string data = 2;
}

message GenPdfRes {
	bytes buffers = 1;
}
